--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -5,12 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Error</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
+  <style>
+
+    .waifu {
+      mask-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 70%,
+        rgba(255, 255, 255, 0) 100%
+      );
+    }
+
+    button {
+      transition: transform 0.3s ease;
+    }
+
+    button:hover {
+      transform: scale(1.1);
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .animated {
+      animation: fadeInUp 1s ease;
+    }
+  </style>
 </head>
 <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Oops, algo salió mal.</h1>
-      <p class="subtitle">Error: <%= error %></p>
+  <section class="hero is-danger is-fullheight" style="background-color: #ffffff;">
+    <div class="hero-body animated">
+      <div class="container has-text-centered">
+        <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="Error Image" style="height: 300px;" class="waifu">
+        <br>
+        <h1 class="title" style="color: #ff6b6b;">
+          Oops, algo salió mal.
+        </h1>
+        <p class="subtitle" style="color: #4a4a4a;">
+          Lo sentimos, pero hubo un error al procesar su solicitud. Por favor, inténtelo de nuevo más tarde.
+        </p>
+        <button class="button is-link" style="background-color: #ff6b6b;">Volver al inicio</button>
+        
+      </div>
     </div>
   </section>
 </body>
