--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <title>NakamaStream - Welcome</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="/src/public/css/index.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>|
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -111,10 +111,26 @@
     </section>    
 
     <footer class="footer">
-        <div class="content">
-            <p id="nakamaFooter">NakamaStream by The Nakama Team. © Todos los derechos reservados.</p>
+        <div class="container__footer">
+            <div class="footer__logo">
+                <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream_Logo">
+                <div class="footer__version">
+                    <p>NakamaStream version: 1.0</p>
+                </div>
+            </div>
+            <div class="footer__links">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Anime</a></li>
+                    <li><a href="#">Manga</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                </ul>
+            </div>
         </div>
-    </footer>
+        <div class="footer__legal">
+            <p>© 2024 NakamaStream. Todos los derechos reservados.</p>
+        </div>
+    </footer>    
 
     <script src="/src/public/js/tabs.js"></script>
     <script src="/src/public/js/navMobile.js"></script>
