--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,7 +32,7 @@
                 <a class="navbar-item button is-primary" href="/login" style="background-color: #ff6b6b; color: white; box-shadow: none;">Iniciar sesión</a>
             </div>
         </div>
-    </nav>      
+    </nav> 
 
     <section class="hero is-fullheight">
         <div class="hero-body">
@@ -120,10 +120,9 @@
             </div>
             <div class="footer__links">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Anime</a></li>
-                    <li><a href="#">Manga</a></li>
-                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="/tos">Términos de Uso</a></li>
+                    <li><a href="/privacy">Política de Privacidad</a></li>
                 </ul>
             </div>
         </div>
