--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="footer__legal">
-            <p>© 2024 NakamaStream. Todos los derechos reservados.</p>
+            <p>© 2024 NakamaStream -  Ningún vídeo se encuentra alojado en nuestros servidores.</p>
         </div>
     </footer>    
 
