--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,10 +28,10 @@
                 <a class="navbar-item" href="https://github.com/NakamaStream">Github</a>
                 <a class="navbar-item" href="https://www.patreon.com/sstudiosdevelopment/membership">Donaciones</a>
             </div>
-            <div class="navbar-end" style="margin-right: 2rem;">
+            <div class="navbar-end" style="margin-right: 2rem; margin-top: 1rem;">
                 <a class="navbar-item button is-primary" href="/login" style="background-color: #ff6b6b; color: white; box-shadow: none;">Iniciar sesión</a>
             </div>
-        </div>
+            
     </nav> 
 
     <section class="hero is-fullheight">
@@ -126,11 +126,14 @@
                 </ul>
             </div>
         </div>
-        <div class="footer__legal">
-            <p>© 2024 NakamaStream -  Ningún vídeo se encuentra alojado en nuestros servidores.</p>
+        <div class="footer__sponsor">
+            <img src="https://github.com/NakamaStream/Resources/blob/main/Sstudiosdev-removebg%20(1).png?raw=true" alt="Logo del Patrocinador">
         </div>
-    </footer>    
-
+        <div class="footer__legal">
+            <p>© 2024 NakamaStream - Ningún vídeo se encuentra alojado en nuestros servidores.</p>
+        </div>
+    </footer>
+     
     <script src="/src/public/js/tabs.js"></script>
     <script src="/src/public/js/navMobile.js"></script>
 </body>
