--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -140,6 +140,7 @@
 .footer__logo img {
     width: 60px;
     margin-right: 20px;
+    margin-left: 40px;
 }
 
 .footer__links ul {
@@ -165,9 +166,10 @@
 
 .footer__legal {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
     font-size: 15px;
 }
+
 
 .footer__version {
     text-align: center;
@@ -177,6 +179,17 @@
 
 .footer__version p {
     font-size: 15px;
+}
+
+.footer__sponsor {
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 60px;
+}
+
+.footer__sponsor img {
+    width: 150px;
+    margin-right: 20px;
 }
 
 .navbar {
