--- a/src/views/tos.ejs
+++ b/src/views/tos.ejs
@@ -93,8 +93,11 @@
                 </ul>
             </div>
         </div>
+        <div class="footer__sponsor">
+            <img src="https://github.com/NakamaStream/Resources/blob/main/Sstudiosdev-removebg%20(1).png?raw=true" alt="Logo del Patrocinador">
+        </div>
         <div class="footer__legal">
-            <p>© 2024 NakamaStream -  Ningún vídeo se encuentra alojado en nuestros servidores.</p>
+            <p>© 2024 NakamaStream - Ningún vídeo se encuentra alojado en nuestros servidores.</p>
         </div>
     </footer>
 
