--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,6 +11,9 @@
 <body>
   <div class="login-form">
     <h1 class="login-form-title">Inicio de sesión</h1>
+    <% if (typeof errorMessage !== 'undefined') { %>
+      <div class="error-message"><%= errorMessage %></div>
+    <% } %>
     <form action="/login" method="post">
       <div class="field">
         <div class="control has-icons-left">
