anime-list.ejs - Function in face beta

--- a/src/views/anime-list.ejs
+++ b/src/views/anime-list.ejs
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Anime List</title>
 </head>
 <body>
-    <h1>Example</h1>
+  <h1>Anime List</h1>
+  <ul>
+    <% animes.forEach(anime => { %>
+      <li>
+        <a href="/anime/<%= anime.id %>">
+          <img src="<%= anime.imageUrl %>" alt="<%= anime.name %>">
+          <p><%= anime.name %></p>
+        </a>
+      </li>
+    <% }); %>
+  </ul>
+  <a href="/anime/upload">Upload a new anime</a>
 </body>
 </html>
