jobs.ejs - Cambios en el contenedor del mapa

--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -62,16 +62,18 @@
     </section>
 
     <section class="section has-background-light">
-        <div class="container">
-            <h2 class="title is-size-2" style="color: #ff6b6b;">Nuestro Equipo Global</h2>
-            <div id="map" style="height: 500px;"></div>
-            
-            <div class="box">
-                <h3 class="subtitle is-size-4">Países y trabajadores</h3>
-                <ol id="country-list" class="is-size-5"></ol>
-            </div>
-        </div>
-    </section>         
+    <div class="container">
+      <h2 class="title is-size-2" style="color: #ff6b6b;">Nuestro Equipo Global</h2>
+      <div id="map" style="height: 500px;" class="box mb-6"></div>
+
+    <div class="box">
+    <h3 class="subtitle is-size-4">Países y trabajadores</h3>
+    <div class="content">
+     <ol id="country-list" class="is-size-5 pl-4"></ol>
+    </div>
+    </div>
+    </div>
+    </section>
     
     <section class="section has-background-light" id="positions">
         <div class="container">
