--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="notification is-warning" style="margin-top: 2em;">
-                <p><strong>Aviso:</strong> Queremos destacar que estos puestos son de carácter voluntario y no implican compensación económica. En el caso de recibir donaciones, estas serán distribuidas entre el equipo de manera equitativa.</p>
+                <p><strong>Aviso:</strong> Queremos destacar que estos puestos son de carácter voluntario y no implican compensación económica. En el caso de recibir donaciones, estas serán distribuidas entre el equipo de manera equitativa. Los motivos son que, al ser una página sin anuncios, no hay forma de generar ingresos, y solo es posible obtener fondos a través de donaciones.</p>
             </div>
         </div>
     </section>
