--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -50,8 +50,9 @@
         </h1>
         <p class="subtitle" style="color: #4a4a4a;">
           Lo sentimos, pero hubo un error al procesar su solicitud. Por favor, inténtelo de nuevo más tarde.
+          Si cree que esto no es un error, por favor contacte con nuestro equipo de soporte.
         </p>
-        <button class="button is-link" style="background-color: #ff6b6b;">Volver al inicio</button>
+        <button class="button is-link" style="background-color: #ff6b6b;" onclick="window.location.href = '/'">Volver al inicio</button>
         
       </div>
     </div>
