--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -109,7 +109,7 @@
                             <h3 class="title is-size-4">Moderadores</h3>
                             <p class="subtitle is-size-5">Remoto</p>
                             <p>Estamos en la búsqueda de moderadores comprometidos para garantizar la seguridad de nuestra plataforma y mejorar la experiencia del usuario.</p> <br>
-                            <a href="/jobs/uxui" class="button is-link" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
+                            <a href="/jobs/moderador" class="button is-link" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
                                 Más Información
                             </a>
                         </div>
@@ -121,7 +121,7 @@
                             <h3 class="title is-size-4">Administradores</h3>
                             <p class="subtitle is-size-5">Remoto</p>
                             <p>Estamos en búsqueda de individuos confiables y dinámicos para desempeñarse como administradores de la plataforma. Tu rol incluirá la publicación de nuevos animes y la moderación de contenidos.</p> <br>
-                            <a href="/jobs/marketing" class="button is-link" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
+                            <a href="/jobs/administrador" class="button is-link" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
                                 Más Información
                             </a>
                         </div>
